# pytestHooksLearn

./: README.md  pyproject.toml
src/pytest_hooks/: Iplugin.py
tests/: TestCases.py
